// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should apply custom title 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Test Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--orange"
      />
      <span
        className="chatoom__status"
      >
        connecting...
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={Array []}
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render correctly on authenticated 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--orange"
      />
      <span
        className="chatoom__status"
      >
        waiting for room data...
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={Array []}
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render correctly on connect 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--orange"
      />
      <span
        className="chatoom__status"
      >
        authenticating...
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={Array []}
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render correctly on connection error 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--red"
      />
      <span
        className="chatoom__status"
      >
        connection error
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={Array []}
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render correctly on disconnect 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--red"
      />
      <span
        className="chatoom__status"
      >
        disconnected
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={Array []}
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render correctly on error 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--red"
      />
      <span
        className="chatoom__status"
      >
        error
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={Array []}
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render correctly on reconnect 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--green"
      />
      <span
        className="chatoom__status"
      >
        reconnected
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={Array []}
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={false}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={false}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render correctly on reconnect_attempt 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--orange"
      />
      <span
        className="chatoom__status"
      >
        reconnection attempt 3...
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={Array []}
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render correctly on reconnect_error 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--red"
      />
      <span
        className="chatoom__status"
      >
        reconnection error
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={Array []}
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render correctly on reconnect_failed 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--red"
      />
      <span
        className="chatoom__status"
      >
        reconnection error
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={Array []}
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render correctly on reconnecting 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--orange"
      />
      <span
        className="chatoom__status"
      >
        reconnection attempt 3...
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={Array []}
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render correctly on timeout 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--red"
      />
      <span
        className="chatoom__status"
      >
        connection timeout
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={Array []}
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render correctly on unauthorized 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--red"
      />
      <span
        className="chatoom__status"
      >
        unauthorized
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={Array []}
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render correctly on unauthorized with error 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--red"
      />
      <span
        className="chatoom__status"
      >
        unauthorized
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={
        Array [
          Object {
            "error": true,
            "text": "Unauthorized: test error",
          },
        ]
      }
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render initial state 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--orange"
      />
      <span
        className="chatoom__status"
      >
        connecting...
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={Array []}
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render message 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--orange"
      />
      <span
        className="chatoom__status"
      >
        connecting...
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={
        Array [
          Object {
            "text": "This is a test message",
            "userId": 1,
          },
        ]
      }
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render room data 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      3
    </p>
    <div
      className="chatroom__members"
    >
      <div
        className="chatroom__member"
        key="0"
      >
        Test User 1
      </div>
      <div
        className="chatroom__member"
        key="1"
      >
        Test User 2
      </div>
      <div
        className="chatroom__member"
        key="2"
      >
        Test User 3
      </div>
    </div>
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--green"
      />
      <span
        className="chatoom__status"
      >
        online
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={
        Array [
          Object {
            "notification": true,
            "text": "Welcome Test User",
          },
        ]
      }
      username="Test User"
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={false}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={false}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render user joining 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      1
    </p>
    <div
      className="chatroom__members"
    >
      <div
        className="chatroom__member"
        key="0"
      >
        Test User
      </div>
    </div>
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--orange"
      />
      <span
        className="chatoom__status"
      >
        connecting...
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={
        Array [
          Object {
            "notification": true,
            "text": "Test User has joined",
          },
        ]
      }
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Should render user leaving 1`] = `
<div
  className="chatroom__container"
>
  <div
    className="chatroom__sidebar"
  >
    <p
      className="chatroom__title"
    >
      Chat Room
    </p>
    <p
      className="chatroom__subtitle"
    >
      Members: 
      0
    </p>
    <div
      className="chatroom__members"
    />
  </div>
  <div
    className="chatroom__main"
  >
    <div
      className="chatoom__status-container"
    >
      <div
        className="chatoom__status-icon chatoom__status-icon--orange"
      />
      <span
        className="chatoom__status"
      >
        connecting...
      </span>
    </div>
    <Chat
      className="chatroom__chat"
      messages={
        Array [
          Object {
            "notification": true,
            "text": "Test User has left",
          },
        ]
      }
    />
    <div
      className="chatroom__input"
    >
      <input
        autoFocus={true}
        disabled={true}
        maxLength={500}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;
